Ajout des bases dans les classes

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 <body>
     <script src="class/Boulanger.js"></script>
     <script src="class/Fabrication.js"></script>
+    <script src="class/Produit.js"></script>
+    <script src="class/Vendeuse.js"></script>
+
+
     <script src="class/Patisserie.js"></script>
     <script src="class/Patissier.js"></script>
-    <script src="class/Produit.js"></script>
+    <script src="class/Boulangerie.js"></script>
+
     <script src="main.js"></script>
 
 </body>
