Ajout du lien vers github et d'un titre

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boulangerie</title>
 </head>
-<body>
+<body style="text-align:center;">
+    <h1>Boulangerie JavaScript</h1>
+    <a target="_blank" href="https://github.com/Adrien-25/boulangerie-js" style="color: red;padding: 15px;background-color: #b9b936;border-radius: 10px;text-decoration: none;font-size: 20px;">Lien GitHub</a>
+    
     <script src="class/Boulanger.js"></script>
     <script src="class/Produit.js"></script>
     <script src="class/Vendeuse.js"></script>
